# smart-blog

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  rav.yaml  render.yaml  requirements-dev.txt  requirements.txt  smart-blog.postman_collection.json  smart-blog.postman_environment.json
blog/: admin.py  feeds.py  models.py  serializers.py  sitemaps.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
templates/emails/: welcome.html  welcome.txt
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: seed_users.py
users/migrations/: 0001_initial.py
