[project]
name = "smart-blog"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "django-cors-headers>=4.3",
    "django-filter>=24.1",
    "djangorestframework>=3.15",
    "gunicorn>=22.0",
    "pillow>=10.0",
    "django-cloudinary-storage>=0.4.0",
    "cloudinary>=1.32.0",
    "python-dotenv>=1.0",
    "djangorestframework-simplejwt>=5.0,<6.0",
    "rav>=0.4.3",
]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
